# llm-codebench

./: .env.example  .gitignore  README.md  pyproject.toml
bench/: __init__.py  cli.py  config.py  cost.py  extract.py  openrouter.py  problems.py  report.py  runner.py  sandbox.py  types.py
config/: models.yaml
docker/: Dockerfile.bash  Dockerfile.csharp  Dockerfile.python  Dockerfile.typescript
problems/bash/expr-tokenizer/: meta.yaml  problem.md  solution.sh  tests.sh
problems/bash/sum-csv-column/: meta.yaml  problem.md  solution.sh  tests.sh
problems/bash/word-count/: meta.yaml  problem.md  solution.sh  tests.sh
problems/bash/word-histogram/: meta.yaml  problem.md  solution.sh  tests.sh
problems/csharp/arith-eval/: problem.md  solution.cs  tests.cs
problems/csharp/balanced-brackets/: problem.md  solution.cs  tests.cs
problems/csharp/block-sums/: meta.yaml  problem.md  solution.cs  tests.cs
problems/csharp/lattice-paths/: meta.yaml  problem.md  solution.cs  tests.cs
problems/csharp/second-largest/: meta.yaml  problem.md  solution.cs  tests.cs
problems/python/compress-ranges/: meta.yaml  problem.md  solution.py  tests.py
problems/python/cover-intervals/: meta.yaml  problem.md  solution.py  tests.py
problems/python/parse-csv-line/: meta.yaml  problem.md  solution.py  tests.py
problems/python/topo-order/: meta.yaml  problem.md  solution.py  tests.py
problems/python/zigzag-merge/: meta.yaml  problem.md  solution.py  tests.py
tests/: test_cost.py  test_extract.py  test_openrouter.py  test_report.py  test_runner.py  test_variants.py
(+20 files in other folders)
