[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-codebench"
version = "0.1.0"
description = "A Python harness that benchmarks LLM coding ability (Python/C#/TypeScript) plus speed and cost via OpenRouter, using a custom sandboxed test suite."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "llm-codebench" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
llm-codebench = "bench.cli:main"

[tool.setuptools]
packages = ["bench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
